new contract form validation