@@ -11,7 +11,11 @@ import com.vaadin.flow.component.textfield.TextField;
 import com.vaadin.flow.data.binder.Binder;
 import com.vaadin.flow.router.*;
 import io.mkolodziejczyk92.data.controllers.ContractAddFormViewController;
-import io.mkolodziejczyk92.data.entity.*;
+import io.mkolodziejczyk92.data.entity.Address;
+import io.mkolodziejczyk92.data.entity.Client;
+import io.mkolodziejczyk92.data.entity.Contract;
+import io.mkolodziejczyk92.data.entity.Purchase;
+import io.mkolodziejczyk92.data.enums.EAddressType;
 import io.mkolodziejczyk92.data.enums.ECommodityType;
 import io.mkolodziejczyk92.utils.ComponentFactory;
 import io.mkolodziejczyk92.views.MainLayout;
@@ -21,7 +25,6 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.HashSet;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static io.mkolodziejczyk92.data.enums.EAddressType.INVESTMENT;
 import static io.mkolodziejczyk92.data.enums.EAddressType.RESIDENCE;
@@ -72,8 +75,13 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
         add(createBottomButtonLayout());
 
         binder.bindInstanceFields(this);
+
+        createFieldsValidation();
+        save.setEnabled(false);
+        createSaveButtonStatus();
         contractAddFormController.clearForm();
     }
+
 
     private Component createTopButtonLayout() {
         HorizontalLayout topButtonLayout = ComponentFactory.createTopButtonLayout();
@@ -94,7 +102,6 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
     }
 
     private void createComboBoxes() {
-
         client.setItems(contractAddFormController.allClients());
         client.setItemLabelGenerator(Client::getFullName);
         client.setMaxWidth("300px");
@@ -103,9 +110,7 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
         commodityType.setItemLabelGenerator(ECommodityType::getName);
         commodityType.setMaxWidth("350px");
         commodityType.getStyle().set("padding-right", "30px");
-
-
-
+        
 
     }
 
@@ -120,7 +125,7 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
             investmentAndResidenceAddresses.add(residenceAddress.getValue());
             investmentAndResidenceAddresses.add(investmentAddress.getValue());
             binder.getBean().setInvestmentAndResidenceAddresses(investmentAndResidenceAddresses);
-            contractAddFormController.saveNewContract(binder.getBean());
+            contractAddFormController.validateAndSaveNewContract(binder.getBean());
             contractAddFormController.updatePurchase(purchaseId, binder.getBean().getNumber());
         });
 
@@ -137,6 +142,56 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
 
     }
 
+    private static void setAddressType(Contract contract, Address address, EAddressType addressType) {
+        Set<Address> addresses = contract.getInvestmentAndResidenceAddresses();
+        if (addresses != null) {
+            addresses.stream()
+                    .filter(a -> a.getAddressType().equals(addressType))
+                    .findFirst()
+                    .ifPresent(a -> {
+                        addresses.remove(a);
+                        addresses.add(address);
+                    });
+        }
+    }
+
+    private static Address getAddressByType(Set<Address> addresses, EAddressType addressType) {
+        if (addresses != null) {
+            return addresses.stream()
+                    .filter(address -> address.getAddressType().equals(addressType))
+                    .findFirst()
+                    .orElse(null);
+        }
+        return null;
+    }
+
+    private void createFieldsValidation() {
+        binder.forField(investmentAddress)
+                .asRequired("Choose investment address")
+                .bind(contract -> getAddressByType(contract.getInvestmentAndResidenceAddresses(), INVESTMENT),
+                        (contract, address) -> setAddressType(contract, address, INVESTMENT));
+
+        binder.forField(residenceAddress)
+                .asRequired("Choose residence address")
+                .bind(contract -> getAddressByType(contract.getInvestmentAndResidenceAddresses(), RESIDENCE),
+                        (contract, address) -> setAddressType(contract, address, RESIDENCE));
+
+        binder.forField(plannedImplementationDate)
+                .asRequired("Please select a date")
+                .bind(Contract::getPlannedImplementationDate, Contract::setPlannedImplementationDate);
+    }
+
+    private void createSaveButtonStatus() {
+        investmentAddress.addValueChangeListener(e -> updateSaveButtonStatus(investmentAddress.isInvalid()));
+        residenceAddress.addValueChangeListener(e -> updateSaveButtonStatus(residenceAddress.isInvalid()));
+        plannedImplementationDate.addValueChangeListener(e -> updateSaveButtonStatus(plannedImplementationDate.isInvalid()));
+
+    }
+
+    private void updateSaveButtonStatus(boolean isInvalid) {
+        save.setEnabled(!isInvalid && !investmentAddress.isEmpty() && !residenceAddress.isEmpty() && !plannedImplementationDate.isEmpty());
+    }
+
     @Override
     public void setParameter(BeforeEvent beforeEvent, @WildcardParameter String urlParameter) {
         if (!urlParameter.isBlank()) {
@@ -150,11 +205,11 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
                 residenceAddress.setItems(allAddresses
                         .stream()
                         .filter(address -> address.getAddressType().equals(RESIDENCE))
-                        .collect(Collectors.toList()));
+                        .toList());
                 investmentAddress.setItems(allAddresses
                         .stream()
                         .filter(address -> address.getAddressType().equals(INVESTMENT))
-                        .collect(Collectors.toList()));
+                        .toList());
                 signatureDate.setValue(now);
                 client.setValue(clientFromPurchase);
                 commodityType.setValue(purchase.getCommodityType());
@@ -162,17 +217,17 @@ public class NewContractFormView extends Div implements HasUrlParameter<String> 
                 number.setValue(contractAddFormController.createContractNumber());
             } else {
                 Contract contract = contractAddFormController.findContractById(Long.valueOf(urlParameter));
-                binder.setBean(contract);
                 Client clientFromContract = contract.getClient();
                 allAddresses = clientFromContract.getAllAddresses();
                 residenceAddress.setItems(allAddresses
                         .stream()
                         .filter(address -> address.getAddressType().equals(RESIDENCE))
-                        .collect(Collectors.toList()));
+                        .toList());
                 investmentAddress.setItems(allAddresses
                         .stream()
                         .filter(address -> address.getAddressType().equals(INVESTMENT))
-                        .collect(Collectors.toList()));
+                        .toList());
+                binder.setBean(contract);
                 investmentAndResidenceAddresses = binder.getBean().getInvestmentAndResidenceAddresses();
                 client.setValue(clientFromContract);
                 number.setValue(contract.getNumber());
